extends Level

func _ready():
# warning-ignore:return_value_discarded
	$FadingLabel2/AnimationPlayer.connect("animation_finished", self, "won")
	$FadingLabel/AnimationPlayer.play("intro")

func current_button(button : TextureButton):
	if ! win:
		.current_button(button)

func drop():
	if ! win:
		.drop()
		if ! rect.has_point($MovableButton.rect_global_position):
			win = true
			$FadingLabel2/AnimationPlayer.play("intro")
